# IWCPlusPlus

./: .gitattributes  .gitignore  Makefile  README.md
.github/workflows/: test.yml
examples/: calc.iwc  holaplaneta.iwc
src/: colors.hpp  eval.cpp  helpers.cpp  iwcpp.cpp  iwcpp.hpp  lexer.cpp  main.cpp  parse.cpp  parser.cpp
src/hdrs/: ast.hpp  iwcpp.hpp  lexer.hpp  parser.hpp
tests/: CMakeLists.txt  tests.cpp
tests/sampFiles/: test1.iwc  test2.iwc  test3.iwc  test4.iwc  test5.iwc  test6.iwc
